# mbinary

./: .bumpversion.cfg  .gitignore  CMakeLists.txt  Cargo.toml  README.md  vcpkg-configuration.json
.github/workflows/: bump-version.yml  publish.yml  publish_crate.yml  publish_pypi.yml
c/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
c/src/: decode.rs  encode.rs  records.rs
c/tests/: test_decode_c.cpp  test_encode_c.cpp  test_records.cpp
mbn/: Cargo.toml
mbn/src/: backtest.rs  backtest_decoder.rs  decode.rs  decode_iterator.rs  encode.rs  enums.rs  error.rs  lib.rs  metadata.rs  record_enum.rs  record_ref.rs  records.rs  symbols.rs
mbn/src/python/: backtest.rs  buffer.rs  enums.rs  live.rs  metadata.rs  mod.rs  records.rs  symbols.rs
mbn/tests/: integration_test.rs
mbn_c/: Cargo.toml
mbn_c/src/: records.rs
mbn_c/tests/: test_decode_c.cpp  test_encode_c.cpp
mbn_python/: Cargo.toml  pyproject.toml  run_test.sh  test.sh
mbn_python/python/mbn/: _lib.pyi
mbn_python/src/: lib.rs
mbn_python/tests/: test_integration.py
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/tests/: test_integration.py
python_mbn/: Cargo.toml  pyproject.toml
python_mbn/python/mbn/: _lib.pyi
python_mbn/src/: lib.rs
python_mbn/tests/: test_integration.py
rust/: Cargo.toml
rust/src/: backtest.rs  encode.rs  enums.rs  error.rs  live.rs  metadata.rs  params.rs  record_enum.rs  records.rs  symbols.rs  vendors.rs
rust/src/python/: backest_encode.rs  buffer.rs  encode.rs  records.rs
rust/tests/: integration_test.rs
scripts/: build_c.sh  test.sh
